--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 
 
         <ul>
-          <li><a href="https://github.com/walfly/ideafulWidget/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/walfly/ideafulWidget/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/walfly/ideafulWidget">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
@@ -32,6 +30,8 @@
 <a id="ideaful-widget" class="anchor" href="#ideaful-widget" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ideaful widget</h3>
 
 <p>Ideaful.co offers a widget that allows you to embed a stream of ideas from any challenge on your page. Simply append the following script tage to your page.</p>
+<div id="container"></div>
+ <script src="http://ideaful.co/embed/challenge/54beb3568c69f30300c7e913.js?container=container&w=350" type="text/javascript"></script>
 
 <div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">src</span>=<span class="pl-s1"><span class="pl-pds">"</span>http://ideaful.co/embed/challenge/[CHALLENGE_ID].js?container=[ID_OF_ELEMENT_TO_APPEND_TO]<span class="pl-ii">&amp;</span>w=[DESIRED_WIDTH]<span class="pl-pds">"</span></span> <span class="pl-e">type</span>=<span class="pl-s1"><span class="pl-pds">"</span>text/javascript<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
       </section>
